# cs2-demo-analyzer

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md
docs/: dev-setup.md
docs/research/: parsing-ecosystem.md  polyglot-playground-findings.md
docs/superpowers/plans/: 2026-05-26-polyglot-playground-setup.md
docs/superpowers/specs/: 2026-05-26-polyglot-playground-setup-design.md
playground/go/: README.md  go.mod
playground/go/cmd/hello-demo/: main.go
playground/python/: README.md  pyproject.toml
playground/python/src/: hello_demo.py
playground/rust/: Cargo.toml  README.md
playground/rust/src/: main.rs
