[project]
name = "cs2-demo-playground-python"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "demoparser2>=0.41.3",
    "pandas>=2.0",
    "polars>=1.36.1",
]

[project.scripts]
hello-demo = "hello_demo:main"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_demo.py"]
