[package]
name = "hello-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# demoparser2 has no published crate on crates.io. The upstream repo's Rust
# crate is named `parser` (under src/parser/) — too generic, so we rename it
# to `demoparser` locally via `package = "parser"`.
#
# Pinned to a specific commit for reproducibility.
demoparser = { git = "https://github.com/LaihoE/demoparser", rev = "54e320f381417b85c2b085921253499bacf9acdc", package = "parser" }
ahash = "0.8"

[profile.release]
# demoparser2 itself enables debug = true in release. Mirror that so symbols
# stay available without changing compile speed materially.
debug = true
